# dashdot

./: .gitignore  Cargo.toml  Dockerfile  buf.gen.yaml  build.rs  compose.yaml  dashdot-v2.glyphs  dashdot.glyphs  envoy.yaml  start.sh
client/Shared/: Database.swift  Migration.swift  Previews.swift
client/dashdot/: Auth.swift  AuthModel.swift  BindingExt.swift  ContentView.swift  ConversationView.swift  InputViewStoryboard.storyboard  Interceptor.swift  LoginView.swift  MorseInputView.swift  MovingGradient.swift  Session.swift  SettingsView.swift  Singletons.swift  Toasts.swift  dashdot.entitlements
client/dashdot/GeneratedMocks/: api.mock.swift
client/dashdot/Model/: Message.swift  User.swift
client/push/: push.entitlements
dashdot/: AppDelegate.swift  ChatViewController.swift  ChatViewStoryboard.storyboard  Database.swift  HomeView.swift  Info.plist  InputViewController.swift  Keychain.swift  LoadingView.swift  Migration.swift  MorseTextView.swift  Singletons.swift  Sync.swift  dashdotApp.swift
dashdot.xcodeproj/: project.pbxproj
dashdot/Model/: Conversation.swift  Message.swift  User.swift  UserConversation.swift
dashdot/Model.xcdatamodeld/Model.xcdatamodel/: contents
entity/: Cargo.toml
entity/src/entities/: msg.rs  token.rs  user_conversation.rs
migration/: Cargo.toml
migration/src/: create_member.rs  create_msg.rs  lib.rs
proto/: api.proto  auth.proto  member.proto  msg.proto
push/: NotificationService.swift
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
server/entity/: Cargo.toml
server/migration/src/: create_chat.rs  create_msg.rs  create_user.rs
server/proto/: chat.proto  push.proto  user.proto
server/src/: api.rs  helper.rs  interceptor.rs  main.rs  server.rs  stream.rs
server/src/apns/: current.rs  error.rs  mod.rs  token.rs
server/src/convert/: date.rs  member.rs  mod.rs  msg.rs  user.rs
server/src/db/: error.rs  join.rs  member.rs  mod.rs  msg.rs  partial.rs
server/src/messenger/: mod.rs
server/src/oauth/: error.rs  issue.rs  mod.rs  verify.rs
server/src/service/: auth.rs  (+3 more)
shared/proto/: sync.proto
src/: api.rs  error.rs  interceptor.rs  main.rs  prelude.rs  request.rs  server.rs  siwa.rs  stream.rs
src/apns/: send.rs  token.rs
src/convert/: chat.rs  error.rs  partial.rs
src/db/: chat.rs  error.rs  helper.rs  join.rs  member.rs  mod.rs  msg.rs  user.rs
src/messenger/: mod.rs
src/oauth/: issue.rs  mod.rs  revoke.rs  verify.rs
src/service/: auth.rs  chat.rs  mod.rs
(+15 files in other folders)
