[package]
name = "dashdotserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "^0", features = [
	"sqlx-postgres",
	"runtime-tokio-native-tls",
	"macros",
] }
anyhow = "1.0.70"
dotenvy = "0.15.6"
jsonwebtoken = "8.3.0"
prost = "0.11.8"
prost-types = "0.11.8"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "time"] }
tonic = { version = "0.8.3", features = ["gzip"] }
pin-project = "1.0.12"
dashmap = "5.4.0"
uuid = { version = "1.3.1", features = ["v4"] }
itertools = "0.10.5"
log = "0.4.17"
futures-lite = "1.13.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
pretty_env_logger = "0.5.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.8.4"

[profile.dist]
inherits = "release"
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1
