[package]
name = "dashdotserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "0.12.2", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
anyhow = "1.0.72"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["rt-multi-thread", "time"] }
tonic = { version = "0.8.3", features = ["gzip"] }
pin-project = "1.1.3"
dashmap = "5.5.0"
uuid = { version = "1.4.1", features = ["v4"] }
itertools = "0.10.5"
log = "0.4.19"
futures-lite = "1.13.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
pretty_env_logger = "0.5.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.8.4"

[profile.dist]
inherits = "release"
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1
